<resources>
    <string name="action_settings">Settings</string>
    <string name="maintab_favourites">Favourites</string>
    <string name="maintab_all">All</string>
    <string name="races">Races</string>
    <string name="dataUpdated">Data was updated</string>
    <string name="save_avorites">Save favourites</string>
    <string name="discardFavorites">Discard changes?</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="thisWeek">This week</string>
    <string name="nextWeek">Next week</string>
    <string name="maintab_series">Series</string>
    <string name="title_activity_settings">Settings</string>
    <string name="no_favourites_selected">You don\'t have any favourite series yet.\nTo select new ones touch the bottom right button.</string>
    <string name="newAppVersion">New app version</string>
    <string name="update">Update</string>
    <string name="downloadingData">Updating data…</string>
    <string name="next">Next race:</string>
    <string name="of">of</string>
    <string name="seriesIsOver">Completed</string>
    <string name="notifRaceBefore" formatted="false">Green flag in %d minutes. (%s)</string>
    <string name="notifRace" formatted="false">Green flag</string>
    <string name="notifRaceToday" formatted="false">Race is today</string>

    <string name="setSingleAlarm">Set race notification</string>
    <string name="setMultiAlarm" formatted="false">Set R%d notification</string>
    <string name="setNotificatioForSeries">Set series notifications</string>
    <string name="removeSingleAlarm">Remove notification</string>
    <string name="removeMultiAlarm" formatted="false">Remove R%d notification</string>

    <string name="alarmSet">Notification set</string>
    <string name="alarmsSet">Notifications set</string>
    <string name="alarmNotSet">Error setting notification</string>
    <string name="alarmsNotSet">Error setting some notifications</string>
    <string name="alarmNotUpdated">Error updating notification</string>
    <string name="raceToday">Start date is today</string>
    <string name="alarmInPast">Start date is in the past</string>

    <string name="maintab_notifications">Notifications</string>
    <string name="action_notifications">Notifications</string>

    <string name="noNotificationSet">You have no notification</string>
    <string name="noNotificationSetFix">To set your first notification select \"Set notification\" from the \"More options\" menu inside each race.</string>
    <!--<string name="noFavouriteSet">You have no favourite series</string>-->
    <!--<string name="noFavouriteSetFix">To set your first favourite series select the tab \"Favourites\" and touch on the bottom right button. Inside this menu select all your favourite races and confirm the selection.</string>-->

    <string name="maintab_about">About</string>
    <string name="action_about">About</string>
    <string name="action_feedback">Send feedback</string>
    <string name="dataVersion">Database</string>
    <string name="devName" translatable="false">Pedro J T Martins</string>
    <string name="devEmail" translatable="false">racingcalendar.pm@gmail.com</string>

    <string name="maintab_settings">Settings</string>
    <string name="minutesBefore">min before green flag</string>
    <string name="notifyBefore">Notify before green flag</string>
    <string name="minutesShort">min</string>
    <string name="notification_enable_defaults">Do not ask when setting</string>
    <string name="remember">Remember</string>
    <string name="notify">Notify</string>
    <string name="ok">OK</string>

    <string name="openUrl">Open website</string>
    <string name="openResults">Open results</string>
    <string name="noBrowser">No web browser found. You must install an app capable of opening web links.</string>
    <string name="settinns_links">Web links</string>
    <string name="settings_open_link_in_app">Open in default browser</string>

    <string name="newSeries">Latest additions\n</string>
    <string name="action_rate">Rate</string>

    <string name="raceShort">R</string>
    <string name="standings">Standings</string>
    <string name="position">Pos</string>
    <string name="name">Name</string>
    <string name="points">Pts</string>
    <string name="times">Time/Delay</string>
    <string name="poweredby" translatable="false">Powered by</string>
    <string name="errorLoadingStandings">The requested results are not available yet. Please try again later.</string>


    <string name="noInternetConnection">No internet connection. Please make sure you\'re connected and try again.</string>
    <string name="notInternetFirstInit">No internet connection. For the first initialization you must have an active connection. Please make sure you\'re connected and try again.</string>
    <string name="upgradePro">Remove ads</string>

    <string name="notification_channel_race_starting">Races starting</string>
    <string name="notification_channel_weekly">Weekly notification</string>
    <string name="settinns_layout">Layout</string>
    <string name="settings_activate_mini_layout">Collapsed Layout</string>

    <string name="inWeeks" formatted="false">In %d weeks</string>

    <string name="exportToCalendar">Export to calendar</string>
    <string name="raceExported">Race exported</string>
    <string name="exportRaceTo">Export event to</string>
    <string name="noCalendarsAvailable">You don\'t have any external calendars. Add one and try again.</string>
    <string name="notification_show_other_years">Show previous years</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="areYouHappyWithApp">Thank you for using Racing Calendar!\nAre you enjoying it?</string>
    <string name="requestRate">That\'s great news!\nWould you like to rate the app?</string>
    <string name="contactForSupport">Please help us improve your experience!\nWould you like to send us some feedback?</string>

    <string name="releaseNotesMsg">
        1. Adds support for multiple editions of the same series (customisable in Settings).\n2. Adds a new \"Send feedback\" menu option.\n3. Fixes several layout and behaviour issues.</string>

    <string name="days">days</string>
    <string name="day">day</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="in">in</string>
    <string name="today">Today</string>

    <string name="weekly_notification">Weekly notification</string>
    <string name="weeklyUpdate">Later this week</string>
    <string name="and">and</string>
    <string name="addFavoutiresForWeeklyNotification">Add favourites to receive a weekly update notifications. You can also disable this notification in the Settings.</string>
</resources>
