<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item-->
    <!--android:id="@+id/action_remove_ads"-->
    <!--android:icon="@drawable/add_favorites"-->
    <!--android:orderInCategory="1"-->
    <!--android:title="@string/upgradePro"-->
    <!--app:showAsAction="ifRoom"/>-->

    <item
        android:id="@+id/action_notifications"
        android:orderInCategory="2"
        android:title="@string/action_notifications"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="3"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_rate"
        android:orderInCategory="4"
        android:title="@string/action_rate"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="5"
        android:title="@string/action_feedback"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="6"
        android:title="@string/action_about"
        app:showAsAction="never"/>

</menu>
