<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="result"
            type="com.pedrojtmartins.racingcalendar.models.EventResultUnit"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:padding="8dp">

        <TextView
            android:id="@+id/pos"
            style="@style/ResultsStandingsHeaderPositionsCol"
            android:text="@string/position"
            tools:text="19"/>

        <TextView
            android:id="@+id/name"
            style="@style/ResultsStandingsHeaderNamesCol"
            android:text="@string/name"
            tools:text="19"/>

        <TextView
            android:id="@+id/points"
            android:text="@string/points"
            style="@style/ResultsStandingsHeaderPointsCol" tools:text="19"/>
    </LinearLayout>
</layout>