<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/set1notif"
        android:orderInCategory="1"
        android:title=""
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/rem1notif"
        android:orderInCategory="1"
        android:title=""
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/set2notif"
        android:orderInCategory="2"
        android:title=""
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/rem2notif"
        android:orderInCategory="2"
        android:title=""
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/set3notif"
        android:orderInCategory="3"
        android:title=""
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/rem3notif"
        android:orderInCategory="3"
        android:title=""
        android:visible="false"
        app:showAsAction="never"/>

    <item
        android:id="@+id/setNotifForAll"
        android:orderInCategory="4"
        android:title="@string/setNotificatioForSeries"
        android:visible="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/openResults"
        android:orderInCategory="5"
        android:title="@string/openResults"
        app:showAsAction="never"/>

    <item
        android:id="@+id/three"
        android:orderInCategory="6"
        android:title="@string/openUrl"
        app:showAsAction="never"/>

    <item
        android:id="@+id/exportToCalendar"
        android:orderInCategory="7"
        android:title="@string/exportToCalendar"
        app:showAsAction="never"/>

</menu>